commit layout changes for dashboard and ticket partial

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
 </head>
 <body>
   <%= render "navigation/topnav" %>
-  <%= render "layouts/index" %>
+  <%# render "layouts/index" %>
 <%= yield %>
 
 </body>
