create backbone view for yelp results

--- a/app/views/restaurants/search.html.erb
+++ b/app/views/restaurants/search.html.erb
@@ -1,5 +1,2 @@
-<form id="yelp" method="get" action="/search_yelp">
-  <input type="text" name="zipcode">
-  <input type="text" name="restaurant">
-  <input type="submit">
-</form>
+<div id="search">
+</div>
