commit partial new promotion view with slide bar

--- a/app/views/layouts/_index.html.erb
+++ b/app/views/layouts/_index.html.erb
@@ -3,5 +3,5 @@
   </div>
 </div>
 <div class="container-fluid" id="home-splash">
-
+  <p>This is my explanation text. I say stuff. What should we put here?</p>
 </div>
