--- a/app/views/promotions/_ticket.html.erb
+++ b/app/views/promotions/_ticket.html.erb
@@ -1,20 +1,34 @@
-<table class="table" id="tickettable" style="display: none;">
-  <caption>Ticket Details</caption>
-  <thead>
-    <th>Discount</th>
-    <th>Minimum Total Spend</th>
-    <th>Group Size</th>
-    <th>Purchaser</th>
-  </thead>
-
-  <tbody>
-
-    <td>discount </td>
-    <td>min_total_spend </td>
-    <td>group_size </td>
-    <td>purchaser </td>
-
-  </tbody>
-
-</table>
+<div class="table ticket" id="tickettable" style="display: none;">
+  <div class="title">
+    <p>Ticket Details</p>
+  </div>
+    <div class="heading">
+      <div class="cell">
+        <p>Discount</p>
+      </div>
+      <div class="cell">
+        <p>Minimum Total Spend</p>
+      </div>
+      <div class="cell">
+        <p>Group Size</p>
+      </div>
+      <div class="cell">
+        <p>Purchaser</p>
+      </div>
+    </div>
+    <div class="row">
+      <div class="cell">
+        <p>"Discount"</p>
+      </div>
+      <div class="cell">
+        <p>"min_total_spend"</p>
+      </div>
+      <div class="cell">
+        <p>group_size</p>
+      </div>
+      <div class="cell">
+        <p>"purchaser"</p>
+      </div>
+    </div>
+</div>
 
