--- a/app/assets/stylesheets/tickets.scss
+++ b/app/assets/stylesheets/tickets.scss
@@ -1,3 +1,26 @@
-#tickettable {
-/*  visibility: hidden;*/
+.table {
+  display: table;
+}
+
+.title {
+  display:table-caption;
+  text-align:center;
+  font-weight:bold;
+  font-size:larger;
+}
+.heading {
+  display: table-row;
+  font-weight: bold;
+  text-align: center;
+}
+.row {
+  display: table-row;
+}
+.cell {
+  display: table-cell;
+  border: solid;
+  border-width: thin;
+  padding-left: 5px;
+  padding-right: 5px;
+
 }
