create new restaurant using auto-population from yelp api

--- a/app/assets/javascripts/templates/new_restaurant.jst.ejs
+++ b/app/assets/javascripts/templates/new_restaurant.jst.ejs
@@ -1,4 +1,5 @@
 <form id="restaurant" action="/restaurants" method="post">
+  <input name="authenticity_token" type="hidden" value="token_value">
   <input type="hidden" name="yelp_id" value='<%= yelp_id %>' />
   <input type="text" name="name" value='<%= name %>' />
   <input type="text" name="display_phone" value='<%= display_phone %>' />
