new restaurant search and creation

--- a/app/assets/javascripts/templates/yelp_results.jst.ejs
+++ b/app/assets/javascripts/templates/yelp_results.jst.ejs
@@ -1,10 +1,13 @@
-<table>
+<div id="search-results">
+<h3>Are one of these businesses yours?</h3>
+<p>Click the claim button to import your information.</p>
+<table class="table table-hover">
   <thead>
     <th>Name</th>
     <th>Phone</th>
     <th>Address</th>
     <th>Cuisine</th>
-    <th>Select</th>
+    <th></th>
   </thead>
   <% collection.models.forEach(function(result, i) { %>
   <tr>
@@ -12,7 +15,8 @@
     <td><%= result.attributes.display_phone %></td>
     <td><%= result.attributes.address %></td>
     <td><%= result.attributes.cuisine %></td>
-    <td><a href="#" data-result-index="<%= i %>" class="result">Choose This Profile</a></td>
+    <td><a href="#" class="result btn-sm btn-primary" data-result-index="<%= i %>" >Claim this business</a></td>
   </tr>
   <% }); %>
 </table>
+</div>
