--- a/app/views/promotions/new.html.erb
+++ b/app/views/promotions/new.html.erb
@@ -1,54 +1,44 @@
-<div class="container">
-  <h1>New Promotion</h1>
-  <%= form_tag restaurant_promotions_path, method: :post, class: "form-group" do %>
-    <div class="form-group">
-      <label for="name"></label>
-      <input type="text" name="promotion[name]">
-    </div>
-    <p>
-      <label for="min_group_size">Set Min Group Size: </label>
-      <input type="text" id="min_group_size" name="promotion[min_group_size]" readonly style="border:0; color:#f6931f; font-weight:bold; width: 50px;">
+<h1>New Promotion</h1>
+<%= form_tag restaurant_promotions_path, method: :post, class: "form-horizontal" do %>
+  <div class="form-group">
+    <label for="name">Name:</label>
+    <input type="text" name="promotion[name]">
+  </div>
+  <div class="form-group">
+    <label for="min_group_size">Set Min Group Size: </label>
+    <input type="text" id="min_group_size" name="promotion[min_group_size]" readonly style="border:0; color:#f6931f; font-weight:bold; width: 50px;">
 
-      <label for="max_group_size">Set Max Group Size: </label>
-      <input type="text" id="max_group_size" name="promotion[max_group_size]" readonly style="border:0; color:#f6931f; font-weight:bold; width: 50px;">
-    </p>
-    <div id="group_size_slider" style="width:250px; color: #f6931f">
-    </div>
-    <br>
-    <p>
-      <label for="preferred_group_size">Preferred Group Size</label>
-      <input type="text" id="preferred_group_size" name="promotion[preferred_group_size]" readonly style="border:0; color:#f6931f; font-weight:bold;">
-    </p>
-    <div id="pref_group_size_slider" style="width:250px;">
-    </div>
-    <br>
-    <p>
-      <label for="loss_tolerance">Loss Tolerance</label>
-      <input type="text" id="loss_tolerance" name="promotion[loss_tolerance]" readonly style="border:0; color:#f6931f; font-weight:bold;">
-    </p>
+    <label for="max_group_size">Set Max Group Size: </label>
+    <input type="text" id="max_group_size" name="promotion[max_group_size]" readonly style="border:0; color:#f6931f; font-weight:bold; width: 50px;">
+    <div id="group_size_slider" style="width:250px; color: #f6931f"></div>
+  </div>
+  <div class="form-group">
+    <label for="preferred_group_size">Preferred Group Size</label>
+    <input type="text" id="preferred_group_size" name="promotion[preferred_group_size]" readonly style="border:0; color:#f6931f; font-weight:bold;">
+    <div id="pref_group_size_slider" style="width:250px;"></div>
+  </div>
+  <div class="form-group">
+    <label for="loss_tolerance">Loss Tolerance</label>
+    <input type="text" id="loss_tolerance" name="promotion[loss_tolerance]" readonly style="border:0; color:#f6931f; font-weight:bold;">
+    <div id="loss_slider" style="width:250px;"></div>
+  </div>
+  <div class="form-group">
+    <label for="min_spend">Minimum Spend (per person):</label>
+    <input type="text" id="min_spend" name="promotion[min_spend]" readonly style="border:0; color:#f6931f; font-weight:bold;">
+    <div id="min_spend_slider" style="width:250px;"></div>
+  </div>
+  <div class="form-group">
+    <label for="max_discount">Maximum Discount</label>
+    <input type="text" id="max_discount" name="promotion[max_discount]" readonly style="border:0; color:#f6931f; font-weight:bold;">
+    <div id="max_disc_slider" style="width:250px;"></div>
+  </div>
+  <div class="form-group">
+    <input type="submit">
+  </div>
+<% end %>
 
-    <div id="loss_slider" style="width:250px;">
-    </div>
-    <br>
-    <p>
-      <label for="min_spend">Minimum Spend (per person):</label>
-      <input type="text" id="min_spend" name="promotion[min_spend]" readonly style="border:0; color:#f6931f; font-weight:bold;">
-    </p>
+<div id="promotion-preview"></div>
 
-    <div id="min_spend_slider" style="width:250px;">
-    </div>
-    <br>
-    <p>
-      <label for="max_discount">Maximum Discount</label>
-      <input type="text" id="max_discount" name="promotion[max_discount]" readonly style="border:0; color:#f6931f; font-weight:bold;">
-    </p>
 
-    <div id="max_disc_slider" style="width:250px;">
-    </div>
-    <br>
-    <div class="form-group">
-      <input type="submit">
-    </div>
-  <% end %>
-</div>
 
+<!-- this is where we should have some sort of dynamic page that shows all of the ticket options as we change them. -->
