--- a/app/views/promotions/new.html.erb
+++ b/app/views/promotions/new.html.erb
@@ -1,5 +1,5 @@
 <h1>New Promotion</h1>
-<%= form_tag restaurant_promotions_path, method: :post, class: "form-horizontal" do %>
+<%= form_tag restaurant_promotions_path, method: :post, id: "new-promotion", class: "form-horizontal col-md-6" do %>
   <div class="form-group">
     <label for="name">Name:</label>
     <input type="text" name="promotion[name]">
@@ -37,8 +37,16 @@
   </div>
 <% end %>
 
-<div id="promotion-preview"></div>
-
-
+<div id="promotion-preview" class="col-md-6">
+  <table class="table">
+    <caption>Ticket Details</caption>
+    <thead>
+      <th>Discount</th>
+      <th>Min Total Spend</th>
+      <th>Group Size</th>
+    </thead>
+    <tbody></tbody>
+  </table>
+</div>
 
 <!-- this is where we should have some sort of dynamic page that shows all of the ticket options as we change them. -->
