created index and show to work with tickets view

--- a/app/views/tickets/index.html.erb
+++ b/app/views/tickets/index.html.erb
@@ -7,10 +7,15 @@
 </div>
 <% @tickets.each do |ticket| %>
 <div class="row">
-  <div class="ticket-row-height col-md-4"><%= ticket.promotion.restaurant.name %></div>
-  <div class="ticket-row-height col-md-2"><%= number_to_currency(ticket.min_total_spend, locale: :en) %></div>
-  <div class="ticket-row-height col-md-2"><%= number_to_currency(ticket.ticket_price, locale: :en) %></div>
-  <div class="ticket-row-height col-md-2"><span class="label label-primary"><%= number_to_percentage(ticket.discount * 100, precision: 2)%></span></div>
-  <div class="ticket-row-height col-md-2"><span class="btn label label-primary">Reserve</span></div>
+  <%= form_tag charges_path, method: :post, id: "new-purchase" %>
+    <div class="ticket-row-height col-md-4"><%= ticket.promotion.restaurant.name %>
+      <input type="hidden" name="purchase[]" value=""></div>
+    <div class="ticket-row-height col-md-2"><%= number_to_currency(ticket.min_total_spend, locale: :en) %>
+      <input type="hidden" name="purchase[]" value=""></div>
+    <div class="ticket-row-height col-md-2"><%= number_to_currency(ticket.ticket_price, locale: :en) %>
+      <input type="hidden" name="purchase[]" value=""></div>
+    <div class="ticket-row-height col-md-2"><span class="label label-primary"><%= number_to_percentage(ticket.discount * 100, precision: 2)%></span><input type="hidden" name="purchase[]" value=""></div>
+    <input type="submit">
+  <!--   <div class="ticket-row-height col-md-2"><span class="btn label label-primary">Reserve</span></div> -->
 </div>
 <% end %>
