--- a/app/views/tickets/index.html.erb
+++ b/app/views/tickets/index.html.erb
@@ -1,3 +1,4 @@
+<script type="text/javascript" src="https://js.stripe.com/v2/"></script>
 <div class="row">
   <div class="ticket-row-height col-md-4">Restaurant Name</div>
   <div class="ticket-row-height col-md-2">Minimum Spend</div>
@@ -25,9 +26,9 @@
       <script src="https://checkout.stripe.com/checkout.js" class="stripe-button"
       data-key="<%= Rails.configuration.stripe[:publishable_key] %>"
       data-description="Your discounted meal."
-      data-amount="<%= ticket.ticket_price * 100 %>"></script>
+      data-amount="<%= ticket.ticket_price.to_i * 100 %>"></script>
       <% end %>
     </div>
   </div>
-
+  <% break if ticket.id > 10 %>
 <% end %>
