--- a/app/views/tickets/index.html.erb
+++ b/app/views/tickets/index.html.erb
@@ -1,28 +1,22 @@
 <script type="text/javascript" src="https://js.stripe.com/v2/"></script>
 <div class="row">
-  <div class="ticket-row-height col-md-4">Restaurant Name</div>
-  <div class="ticket-row-height col-md-2">Minimum Spend</div>
-  <div class="ticket-row-height col-md-2">Ticket Price</div>
-  <div class="ticket-row-height col-md-2">Discount</div>
-  <div class="ticket-row-height col-md-2">Buy</div>
+  <div class="ticket-row-height col-md-3"><strong>Restaurant Name</strong></div>
+  <div class="ticket-row-height col-md-2"><strong>Minimum Spend</strong></div>
+  <div class="ticket-row-height col-md-2"><strong>Discount</strong></div>
+  <div class="ticket-row-height col-md-2"><strong>Ticket Price</strong></div>
+  <div class="ticket-row-height col-md-2"><strong>Buy</strong></div>
 </div>
 
 <% @tickets.each do |ticket| %>
   <div class="row">
-    <div class="ticket-row-height col-md-4"><%= ticket.promotion.restaurant.name %></div>
+    <div class="ticket-row-height col-md-3"><%= ticket.promotion.restaurant.name %></div>
     <div class="ticket-row-height col-md-2"><%= number_to_currency(ticket.min_total_spend, locale: :en) %></div>
+    <div class="ticket-row-height col-md-2"><%= number_to_percentage(ticket.discount * 100, precision: 2)%></div>
     <div class="ticket-row-height col-md-2"><%= number_to_currency(ticket.ticket_price, locale: :en) %></div>
-    <div class="ticket-row-height col-md-2"><span class="label label-primary"><%= number_to_percentage(ticket.discount * 100, precision: 2)%></span></div>
     <div class="ticket-row-height col-md-2">
       <%= form_tag purchases_path do %>
       <input type="hidden" name="purchase[promotion]" value="<%= ticket.promotion %>">
       <input type="hidden" name="purchase[ticket_price]" value="<%= ticket.ticket_price %>">
-      <article>
-        <label class="amount">
-          <span>Amount: <%= number_to_currency(ticket.ticket_price, locale: :en) %></span>
-        </label>
-      </article>
-
       <script src="https://checkout.stripe.com/checkout.js" class="stripe-button"
       data-key="<%= Rails.configuration.stripe[:publishable_key] %>"
       data-description="Your discounted meal."
