remove require_tree . from asset pipeline, it's so bad

--- a/app/views/promotions/new.html.erb
+++ b/app/views/promotions/new.html.erb
@@ -48,5 +48,4 @@
     <tbody></tbody>
   </table>
 </div>
-
-<!-- this is where we should have some sort of dynamic page that shows all of the ticket options as we change them. -->
+<%= javascript_include_tag 'promotions.js' %>
