--- a/app/views/purchases/create.html.erb
+++ b/app/views/purchases/create.html.erb
@@ -1,1 +1,3 @@
-<h2>Thanks, you paid <strong><%= number_to_currency(@amount / 100) %></strong>!</h2>
+<h2>Thanks, <%= @purchase.purchaser_name %>!</h2>
+<h3>You paid <strong><%= number_to_currency(@amount.to_f / 100) %></strong>!</h3>
+<h3>You'll be receiving a text message with your confirmation id for your reservation at <%= @purchase.phone_number %>.</h3>
