--- a/app/views/purchases/new.html.erb
+++ b/app/views/purchases/new.html.erb
@@ -19,6 +19,11 @@
   </div>
 
   <div>
+    <label for="phone_number">Email:</label>
+    <input id="phone_number" type="text" name="purchase[email]" />
+  </div>
+
+  <div>
     <label for="card-number">Card Number:</label>
     <input id="card-number" type="text" data-stripe="number" />
   </div>
