--- a/app/views/purchases/new.html.erb
+++ b/app/views/purchases/new.html.erb
@@ -1,4 +1,3 @@
-<script type="text/javascript" src="https://js.stripe.com/v2/"></script>
 <script type="text/javascript">
   Stripe.setPublishableKey('pk_test_HmnZw3G1iR2Bbhq1JmfudxvY');
 </script>
@@ -50,3 +49,4 @@
   <div>
 <% end %>
 
+<%= javascript_include_tag "purchases.js" %>
