--- a/app/views/purchases/new.html.erb
+++ b/app/views/purchases/new.html.erb
@@ -1,3 +1,4 @@
+<script type="text/javascript" src="https://js.stripe.com/v2/"></script>
 <script type="text/javascript">
   Stripe.setPublishableKey('pk_test_HmnZw3G1iR2Bbhq1JmfudxvY');
 </script>
@@ -49,4 +50,3 @@
   <div>
 <% end %>
 
-<%= javascript_include_tag "purchases.js" %>
