--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -1,38 +1,36 @@
 <div class="container">
-  <h1><%= @restaurant.name %></h1>
-  <h3><%= @restaurant.cuisine %></h3>
+  <h3><%= @restaurant.name %></h3>
+  <h4><%= @restaurant.cuisine %></h4>
+  <h4><%= @restaurant.address %></h4>
+  <h4><%= @restaurant.display_phone %></h4>
+  <hr></hr>
+
+  <table class="table">
   <% @restaurant.promotions.each do |promotion| %>
-    <div class="col-md-4">
-      <div class="btn btn-lg btn-primary btn-block">
-        <%= promotion.name %>
-      </div>
-      <%= render :partial =>  "promotions/ticket", locals: {promotion: promotion} %>
-
-      <div class="table-responsive">
-        <table class="table">
-          <caption>Promotion Details</caption>
-          <thead>
-            <th>Min Group</th>
-            <th>Max Group</th>
-            <th>Preferred Group</th>
-            <th>Loss Tolerance</th>
-          </thead>
-          <tbody>
-            <td><%= promotion.min_group_size %></td>
-            <td><%= promotion.max_group_size %></td>
-            <td><%= promotion.preferred_group_size %></td>
-            <td><%= promotion.loss_tolerance %></td>
-          </tbody>
-        </table>
-      </div>
-    </div>
-  <% end %>
-    <div class="special-container col-md-4">
-      <div class="btn btn-lg btn-primary btn-block">
-        <%= link_to "New Promotion", new_restaurant_promotion_path(:restaurant_id => @restaurant.id) %>
-      </div>
-    </div>
-
+    <thead><th><%= promotion.name %></th></thead>
+    <tr>
+      <td>Group Size</td>
+      <td>Minimum Spend</td>
+      <td>Discount</td>
+      <td>Ticket Price</td>
+      <td>Purchase</td>
+    </tr>
+      <% promotion.tickets.each do |ticket| %>
+      <tr>
+        <td><%= ticket.group_size %></td>
+        <td><%= number_to_currency(ticket.min_total_spend, locale: :en) %></td>
+        <td><%= number_to_percentage(ticket.discount * 100, precision: 2) %></td>
+        <td><%= number_to_currency(ticket.ticket_price, locale: :en) %></td>
+        <td>
+          <%= form_tag new_purchase_path, method: :get do %>
+            <input type="hidden" name="purchase[ticket_id]" value="<%= ticket.id %>">
+            <input type="submit" value="Purchase">
+          <% end %>
+        </td>
+      </tr>
+      <% end %>
+    <% end %>
+  </table>
 </div>
 
 <%= javascript_include_tag "tickets.js" %>
