--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -2,7 +2,7 @@
   <h3><%= @restaurant.name %></h3>
   <h4><%= @restaurant.cuisine %></h4>
   <h4><%= @restaurant.address %></h4>
-  <h4><%= @restaurant.display_phone %></h4>
+  <h4><%= (@restaurant.display_phone).gsub(/\+1-/, "") %></h4>
   <hr></hr>
 
   <table class="table">
