--- a/app/views/purchases/new.html.erb
+++ b/app/views/purchases/new.html.erb
@@ -11,32 +11,62 @@
 
     <div class="form-group">
       <label for="purchaser_name">Purchaser Name</label>
-      <input class="form-control" id="purchaser_name" type="text" name="purchase[purchaser_name]" />
+      <input class="form-control" id="purchaser_name" type="text" name="purchase[purchaser_name]" placeholder="Name"/>
     </div>
 
     <div class="form-group">
       <label for="phone_number">Phone Number</label>
-      <input class="form-control" id="phone_number" type="text" name="purchase[phone_number]" />
+      <input class="form-control" id="phone_number" type="text" name="purchase[phone_number]" placeholder="213-333-4444"/>
     </div>
 
     <div class="form-group">
       <label for="phone_number">Email</label>
-      <input class="form-control" id="phone_number" type="text" name="purchase[email]" />
+      <input class="form-control" id="phone_number" type="text" name="purchase[email]" placeholder="me@example.com"/>
     </div>
 
     <div class="form-group">
       <label for="card-number">Card Number</label>
-      <input class="form-control" id="card-number" type="text" data-stripe="number" />
+      <input class="form-control" id="card-number" type="text" data-stripe="number" placeholder="4321 4321 4321 4321"/>
     </div>
 
     <div class="form-group">
       <label for="card-exp-month">Card Expiration Month</label>
-      <input class="form-control" id="card-exp-month" type="text" data-stripe="exp_month" />
+      <select class="form-control" id="card-exp-month" data-stripe="exp_month">
+        <option>01</option>
+        <option>02</option>
+        <option>03</option>
+        <option>04</option>
+        <option>05</option>
+        <option>06</option>
+        <option>07</option>
+        <option>08</option>
+        <option>09</option>
+        <option>10</option>
+        <option>11</option>
+        <option>12</option>
+      </select>
     </div>
 
     <div class="form-group">
       <label for="card-exp-year">Card Expiration Year</label>
-      <input class="form-control" id="card-exp-year" type="text" data-stripe="exp_year" />
+      <select class="form-control" id="card-exp-year" data-stripe="exp_year">
+        <option>2015</option>
+        <option>2016</option>
+        <option>2017</option>
+        <option>2018</option>
+        <option>2019</option>
+        <option>2020</option>
+        <option>2021</option>
+        <option>2022</option>
+        <option>2023</option>
+        <option>2024</option>
+        <option>2025</option>
+        <option>2026</option>
+        <option>2027</option>
+        <option>2028</option>
+        <option>2029</option>
+        <option>2030</option>
+      </select>
     </div>
 
     <div class="form-group">
