--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -5,12 +5,15 @@
   left: 0;
   text-align: center;
   margin: auto;
+  font-family: "Oswald", sans-serif;
+  font-size: 50px;
 }
 
 .navbar {
-  background-color: #FF7800;
+  background-color: black;
   border-radius: 0px;
   margin-bottom: 0px;
+  height: 100px;
 }
 
 .jumbotron {
