show restaurant page displays responsively

--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -16,6 +16,10 @@
   height: 100px;
 }
 
+.navbar-header {
+  margin-top: 20px;
+}
+
 .jumbotron {
   height: 400px;
   background-image: url("exampleimage.png");
