working with Aly on purchase page

--- a/app/assets/stylesheets/restaurants.scss
+++ b/app/assets/stylesheets/restaurants.scss
@@ -8,8 +8,10 @@
 }
 
 .view-tickets-promo-name {
+  font-weight: 500;
   font-size: 18px;
   border-bottom: 1px solid #333;
+  padding: 0px 0px 10px 5px;
 }
 
 .ticket-header-item {
@@ -43,3 +45,5 @@
 .restaurant-show-details {
   margin-bottom: 0;
 }
+
+
