--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -7,13 +7,14 @@
   margin: auto;
   font-family: "Oswald", sans-serif;
   font-size: 50px;
+  color: #F07241;
 }
 
 .navbar {
-  background-color: black;
+  background-color: #333;
   border-radius: 0px;
   margin-bottom: 0px;
-  height: 100px;
+  height: 120px;
 }
 
 .navbar-header {
@@ -34,4 +35,12 @@
   height: 350px;
   text-align: center;
   padding: 50px;
+}
+
+.map-explanation {
+  text-align: center;
+  color: #cecece;
+  font-weight: 100;
+  margin-top: 15px;
+  font-size: 18px;
 }
