--- a/app/views/navigation/_topnav.html.erb
+++ b/app/views/navigation/_topnav.html.erb
@@ -9,5 +9,10 @@
       </button>
       <a class="navbar-brand" href="#">MEAL TICKET</a>
     </div>
+    <% if current_page?('/map') %>
+      <div class="map-explanation">
+        Select a pin to see great meal deals!
+      </div>
+    <% end %>
   </div>
 </nav>
